--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <div class="wrapper">
   <h1>Abdullah's Stopwatch</h1>
   <h2>JavaScript Stopwatch</h2>
+  <h3>
+    This is a simple Stopwatch i am making to improve my skills in programming
+    and in JavaScript :p
+  </h3>
   <p><span id="seconds">00</span>:<span id="tens">00</span></p>
   <button id="button-start">Start</button>
   <button id="button-stop">Stop</button>
