--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h2>JavaScript Stopwatch</h2>
   <h3>
     This is a simple Stopwatch i am making to improve my skills in programming
-    and in JavaScript :p
+    and in JavaScript.
   </h3>
   <p><span id="seconds">00</span>:<span id="tens">00</span></p>
   <button id="button-start">Start</button>
