--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     This is a simple Stopwatch i am making to improve my skills in programming
     and in JavaScript.
   </h3>
-  <p><span id="seconds">00</span>:<span id="tens">00</span></p>
-  <button id="button-start">Start</button>
-  <button id="button-stop">Stop</button>
-  <button id="button-reset">Reset</button>
+  <p>
+    <span id="minutes">00</span>:<span id="seconds">00</span>:<span
+      id="milliseconds"
+      >00</span
+    >
+  </p>
+  <button id="start-button">Start</button>
+  <button id="stop-button">Stop</button>
+  <button id="restart-button">Restart</button>
 </div>
